versioned_docs/version-6.0/studio/server/certificates/server-management-certificates-view.mdx
---
title: "Certificates View"
hide_table_of_contents: true
sidebar_label: Certificates Management View
sidebar_position: 0
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

# Certificates View
<Admonition type="note" title="Note">

* Use the **Certificates** view to create, customize, import and export certificates.  

* In this article:
   * [The certificates view](../../../studio/server/certificates/server-management-certificates-view.mdx#the-certificates-view)  
   * [View and edit certificates](../../../studio/server/certificates/server-management-certificates-view.mdx#view-and-edit-certificates)  
   * [Generate a client certificate](../../../studio/server/certificates/server-management-certificates-view.mdx#generate-a-client-certificate)  
   * [Enable communication between secure servers](../../../studio/server/certificates/server-management-certificates-view.mdx#enable-communication-between-secure-servers)  
      * [Upload an existing client certificate](../../../studio/server/certificates/server-management-certificates-view.mdx#upload-an-existing-client-certificate)
      * [Export server certificates](../../../studio/server/certificates/server-management-certificates-view.mdx#export-server-certificates)
   * [Certificate collections](../../../studio/server/certificates/server-management-certificates-view.mdx#certificate-collections)

</Admonition>
## The certificates view

![Studio Certificates Management View](./assets/studio-certificates-overview.png)

Client certificates are managed by RavenDB directly and not through any PKI infrastructure.  
To remove or reduce permissions on a certificate handed to a client, you can edit or remove 
the permissions entirely using this view.

1. Click **Manage Server** tab.
2. Select **Certificates**.
3. **Client certificate**  
   * [Generate client certificate](../../../server/security/authentication/certificate-management.mdx#generate-client-certificate) a new client certificate  
   * [Upload a client certificate](../../../server/security/authentication/certificate-management.mdx#upload-an-existing-certificate) that was exported from another server so that they can communicate.  
4. **Server certificates**  
   * [Export server certificates](../../../server/security/authentication/certificate-management.mdx#export-server-certificates) so that you can import them into another server.  
   * [Replace server certificates](../../../server/security/authentication/certificate-renewal-and-rotation.mdx) by uploading another `.pfx` certificate.  
5. **Well known admin certificate**  
   This is a trusted certificate, defined by a system administrator and given admin permissions.  
6. **Server certificate**  
   You can click [Renew now](../../../server/security/authentication/certificate-renewal-and-rotation.mdx) here.  
7. **Client certificate currently active in this server**  
   You can remove client certificates here or [edit](../../../server/security/authentication/certificate-management.mdx#edit-certificate) their settings, 
   e.g. databases permissions and [authorization](../../../server/security/authorization/security-clearance-and-permissions.mdx#authorization-security-clearance-and-permissions) 
   (security clearance) levels.  



## View and edit certificates

In the image below, the client certificates (`sampledom.client.certificate` and `Booking`) have different 
**security clearance** and **database permissions** configurations.  
This is done to give admins the ability to protect the contents of their databases by **customizing permissions**.  

For example, an application user can be given read/write access to the HR database, while project managers 
receive operator permissions on all databases.  

You can grant different [access levels](../../../server/security/authorization/security-clearance-and-permissions.mdx#authorization-security-clearance-and-permissions) 
by using different client certificates, each with its own set of permissions.  

![Client Certificate Settings](./assets/registered.png)

1. **Name**  
   Client certificate name.  
2. **Thumbprint**  
   Unique key for each certificate.  
3. **Security Clearance**  
   [Authorization level](../../../server/security/authorization/security-clearance-and-permissions.mdx#authorization-security-clearance-and-permissions) 
   that determines types of actions that can be done with this certificate.  
4. **Valid From**  
   Indicates when the certificate became valid. 
5. **Expiration date**  
   Client certificates are given 5 year expiration period by default.  
6. **Database Permissions**  
   The databases in this cluster that this client certificate has access to.  
7. **Edit Certificate**  
   Configure which databases it can access (applicable for User level) and its authorization clearance level.  
8. **Delete Certificate**  



## Generate a client certificate 

Use this view to generate a client certificate directly via RavenDB.  
Newly generated certificates will be added to the list of registered certificates.  

![Generate Client Certificate](./assets/generate.png)

1. **Certificate Name**
2. **Security Clearance Level**  
   Read more [here](../../../server/security/authorization/security-clearance-and-permissions.mdx#authorization-security-clearance-and-permissions) 
   about available clearance levels.  
3. **Certificate Passphrase**  
4. **Expiration Period**  
   Client certificates expiration is set to 5 years by default.  
5. **Database Permissions**  
   Select the **databases** that this certificate gives access to,  
   and the allowed **access level** for each database.  
6. **Require two-factor authentication**  
   Use this setting to add a two-factor authentication security layer to your certificate.  
    - Enabling two-factor authentication will display the certificate's **authentication key** 
      and **QR code**.  
    - You can then scan the QR code or copy the key by an external authentication application 
      of your choice, e.g. Google Authenticator or 2FAS.  
    - A client that connects Studio with a certificate that requires two-factor authentication, 
      will be granted access only after providing a code generated by the external authentication 
      service.  
    - This is what Studio's clearance screen looks like when 2-factor authentication is used:
      
         ![Entering Studio with Two-Factor Authentication](./assets/two-factor-auth.png)
     
         * **A. Authentication Code**  
           Provide a code generated by your 2-Factor authentication service.  
         * **B. Additional Settings**  
           You can limit the session duration here.  
           You can also grant access only to this browser, or use this 
           clearance screen to open Studio for other clients as well.  
7. **Generate** the certificate or **Cancel**.  
   
<Admonition type="note" title="Note">
The information collected in this view is used by RavenDB internally, 
and will not be stored in the certificate itself.
</Admonition>



## Enable communication between secure servers 

To enable communication between two secure databases, you need to:

1. **Export** ([download](../../../server/security/authentication/certificate-management.mdx#export-server-certificates)) 
   the `.pfx` certificate from the destination cluster.  
2. **Upload** (import) the downloaded certificate into the source server.  
### Upload an existing client certificate

Use this option to upload an existing client certificate.  
Uploaded certificates will be added to the list of registered certificates.  

![Upload client certificate](./assets/upload.png)

While uploading the client certificate you can modify its settings.  

![Modify uploaded certificate settings](./assets/upload-settings.png)

See the [Generate a client certificate](../../../studio/server/certificates/server-management-certificates-view.mdx#generate-a-client-certificate) 
section to learn about the available settings.  
### Export server certificates

![Export Server Certificates](./assets/export-server-certificates.png)

This option allows you to export the server certificate as a `.pfx` file.  
In the case of a cluster that contains several different server certificates, 
a `.pfx` [collection](../../../server/security/authentication/certificate-management.mdx#certificate-collections) 
will be exported.



## Certificate collections 

`.pfx` files may contain a single certificate or a collection of certificates.

When uploading a `.pfx` file with multiple certificates, RavenDB will add all certificates 
to the list of registered certificates as a single entry, and explicitly allow access to 
all certificates by their thumbprint.



